Fixed navigation overflow bug

--- a/src/scss/cagov/nav-megamenu.scss
+++ b/src/scss/cagov/nav-megamenu.scss
@@ -210,8 +210,7 @@ a.second-level-link {
   $nav-unit-base: 65px;
 
   .unit1 {
-    height: $nav-unit-base;
-    overflow: hidden !important;
+    min-height: $nav-unit-base;
   }
 
   .unit2 {
